endret på skrive feil
jeg har endret på skrive feil og endret tekst og mellomrom

--- a/Hndlekurv.html
+++ b/Hndlekurv.html
@@ -30,19 +30,19 @@
             <table>
                 <div class="Overksrift_tabel">
                     <p>Merke</p>
-                    <p>modell</p>
-                    <p>kilometer</p>
-                    <p>drisfoff</p>
-                    <p>pris</p>
+                    <p>Modell</p>
+                    <p>Kilometer</p>
+                    <p>Drisfoff</p>
+                    <p>Pris</p>
                 </div>
                 <tr>
-                    <th><p>MBW - X2</p><p>2025</p><p>150km</p><p>Elektrisk</p><p>460 000kr</p><button class="Slet">-</button></th>
+                    <th><p>MBW - X2</p><p>2025</p><p>150 km</p><p>Elektrisk</p><p>460 000 kr</p><button class="Slet">-</button></th>
                 </tr>
                 <tr>
-                    <th><p>MBW - X2</p><p>2025</p><p>150km</p><p>Elektrisk</p><p>460 000kr</p><button class="Slet">-</button></th>
+                    <th><p>MBW - X2</p><p>2025</p><p>150 km</p><p>Elektrisk</p><p>460 000 kr</p><button class="Slet">-</button></th>
                 </tr>
                 <tr>
-                    <th><p>MBW - X2</p><p>2025</p><p>150km</p><p>Elektrisk</p><p>460 000kr</p><button class="Slet">-</button></th>
+                    <th><p>MBW - X2</p><p>2025</p><p>150 km</p><p>Elektrisk</p><p>460 000 kr</p><button class="Slet">-</button></th>
                 </tr>
             
             </table>
