--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         <div class="cards">
             <div class="card">
                 <div class="Bilde_Sow"><img src="" alt=""></div>
-                <div class="Infoetype_cd"><p>MBW - X2</p><p class="Pris">460 000. kr</p></div> 
+                <div class="Infoetype_cd"><p>MBW - X2</p><p class="Pris">460 000 kr</p></div> 
             </div>
             <div class="card">
                 <div class="Bilde_Sow"><img src="" alt=""></div>
-                <div class="Infoetype_cd"><p>MBW - X2</p><p class="Pris">460 000. kr</p></div> 
+                <div class="Infoetype_cd"><p>MBW - X2</p><p class="Pris">460 000 kr</p></div> 
             </div>
             <div class="card">
                 <div class="Bilde_Sow"><img src="" alt=""></div>
-                <div class="Infoetype_cd"><p>MBW - X2</p><p class="Pris">460 000. kr</p></div> 
+                <div class="Infoetype_cd"><p>MBW - X2</p><p class="Pris">460 000 kr</p></div> 
             </div>
        </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="bud_infoVLG3"><p>Support</p> <img src="Resusser/Pluss_icon.svg" width="25px" alt=""></div>
     </div></div>
 
-    <div class="salg_bytte"><h1 class="salg_ov">Kjøpet</h1><h1>kan vi tilby og gjøre en god avtale</h1></div>
+    <div class="salg_bytte"><h1 class="salg_ov">Kjøp</h1><h1>hos oss og vi tilbyr deg en god avtale</h1></div>
     <div class="salg_tekst"><p>Ved å kjøpe hos oss kan vi tilby service på bilen, eller bytte til en elektrisk <br>
          bil med en verdi som er over 30 % av bilen du ønsker deg.</p>
     </div>
@@ -80,15 +80,15 @@
             <div class="bildeSC"><img src="Resusser/Survis_icon.png" alt="icon av et verktøy for å vise reperasjon."></div>
             <div class="tekstSH">
                 <h1>service</h1>
-                <p>få Fikset bilen din her</p>
+                <p>Få fikset bilen din her</p>
             </div>
         </div>
         <div class="change_card">
             <div class="bildech"><img src="Resusser/bytt_icon.svg" alt="icon av et verktøy for å vise reperasjon."></div>
             <div class="tekstSH">
-                <h1>change Car</h1>
+                <h1>change car</h1>
                 <p>Bilen du bytter inn må utgjøre <br>
-                     minst 30 % av kostnaden til nybil.</p>
+                     minst 30 % av kostnaden til nybil</p>
             </div>
         </div>
     </div>
