--- a/ShoppCar.html
+++ b/ShoppCar.html
@@ -31,39 +31,19 @@
                 <div class="card2">
                     <div class="Bilde_Sow"><img src="" alt=""></div>
                     <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
                     <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
                 </div>
                 <div class="card2">
                     <div class="Bilde_Sow"><img src="" alt=""></div>
                     <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
                     <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
                 </div>
                 <div class="card2">
                     <div class="Bilde_Sow"><img src="" alt=""></div>
                     <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
-                    <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="card2">
-                    <div class="Bilde_Sow"><img src="" alt=""></div>
-                    <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
-                    <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
-                </div>
-                <div class="card2">
-                    <div class="Bilde_Sow"><img src="" alt=""></div>
-                    <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
-                    <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
-                </div>
-                <div class="card2">
-                    <div class="Bilde_Sow"><img src="" alt=""></div>
-                    <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
                     <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
                 </div>
             </div>
@@ -71,19 +51,39 @@
                 <div class="card2">
                     <div class="Bilde_Sow"><img src="" alt=""></div>
                     <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
                     <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
                 </div>
                 <div class="card2">
                     <div class="Bilde_Sow"><img src="" alt=""></div>
                     <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
                     <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
                 </div>
                 <div class="card2">
                     <div class="Bilde_Sow"><img src="" alt=""></div>
                     <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
-                    <div class="prisdrift_cd"><p class="Pris_bil">460 000. kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card2">
+                    <div class="Bilde_Sow"><img src="" alt=""></div>
+                    <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
+                </div>
+                <div class="card2">
+                    <div class="Bilde_Sow"><img src="" alt=""></div>
+                    <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
+                    <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
+                </div>
+                <div class="card2">
+                    <div class="Bilde_Sow"><img src="" alt=""></div>
+                    <div class="OVSKrift_cd"><h1>MBW - X2</h1><p class="modell">2024/150 KW</p></div> 
+                    <div class="prisdrift_cd"><p class="Pris_bil">460 000 kr</p><p class="stoff"><img src="Resusser/Group 53.svg" alt=""> 77 kWh</p></div> 
                     <div class="valg_cd"><button class="Legg_hanlist">+ legg til vare</button><button class="Rilinfo_cd">Utforsk mer ></button></div>
                 </div>
             </div>
